trying to fix stretched train image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
 .jumbotron {
   background-image: url("../images/train1.jpg");
-  background-size: cover;
+  /*background-size: cover;*/
 }
